--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,14 @@ group 'org.softlang.megal'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.0.6'
+    ext.kotlin_version = '1.1.0-rc-91'
 
     repositories {
         mavenCentral()
+
+        maven {
+            url 'http://dl.bintray.com/kotlin/kotlin-eap-1.1'
+        }
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -22,6 +26,10 @@ repositories {
 
     maven {
         url 'https://dl.bintray.com/wasabifx/wasabifx/'
+    }
+
+    maven {
+        url 'http://dl.bintray.com/kotlin/kotlin-eap-1.1'
     }
 }
 
